tests/golden/runtime/endpoint_trace.stderr
error[endpoint]: unhandled err reached main: ""oops" is not an integer"
  born in parse at endpoint_trace.kso:5
  passed through report ← grade
